Add support for GraphQL schema query field names and result types customizations (#419)
* Add support for GraphQL schema query field names and result type customizations

* Add initial spring-graphql-web example with mutations

* apply prettier formatting

* introduce EntityObjectTypeMetadata registry

* Add BooksSchemaCustomizerBuildTest

* update BooksSchemaCustomizerBuildTest

* add BooksSchemaCustomizerBuildTest tests

* Add example graphql query ApplicationTest

* Add MutationControllerTest

* Add SubscriptionControllerTest

* Extract GraphQLSchemaConfiguration from Application

* Polish GraphQLObjectTypeMetadata

* add notifyBooksCreated test

* Refine example graphql schema merge to filter null placeholders

* add queryResultTypeNameCustomizer example

* refine CodeRegistryVisitor to remove deprecated use of getDataFetcher

* polish